add update check, chain sb.append

--- a/pom.xml
+++ b/pom.xml
@@ -41,4 +41,12 @@
         </resources>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.elliotnash</groupId>
+            <artifactId>JenkinsUpdater</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
