use jenkins build number

--- a/spigot/src/main/resources/plugin.yml
+++ b/spigot/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: RandomIcon
-version: ${project.version}
+version: ${jenkins.buildNumber}
 main: org.elliotnash.randomicon.spigot.SpigotMain
 api-version: 1.16
 authors: [ Elliot ]
