--- a/spigot/src/main/resources/plugin.yml
+++ b/spigot/src/main/resources/plugin.yml
@@ -1,5 +1,6 @@
 name: RandomIcon
 version: ${jenkins.buildNumber}
+website: https://ci.elliotnash.org/job/Minecraft/job/RandomIcon
 main: org.elliotnash.randomicon.spigot.SpigotMain
 api-version: 1.16
 authors: [ Elliot ]
