--- a/core/pom.xml
+++ b/core/pom.xml
@@ -30,6 +30,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.moandjiezana.toml</groupId>
+            <artifactId>toml4j</artifactId>
+            <version>0.7.2</version>
+        </dependency>
     </dependencies>
 
     <repositories>
