--- a/core/pom.xml
+++ b/core/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>4.2.0_225</version>
+            <version>4.3.0_277</version>
             <exclusions>
                 <exclusion>
                     <groupId>club.minnced</groupId>
@@ -54,6 +54,11 @@
             <id>jcenter</id>
             <name>jcenter-bintray</name>
             <url>https://jcenter.bintray.com</url>
+        </repository>
+        <repository>
+            <id>dv8tion</id>
+            <name>m2-dv8tion</name>
+            <url>https://m2.dv8tion.net/releases</url>
         </repository>
     </repositories>
 
